--- a/simple-calculator/Jenkinsfile
+++ b/simple-calculator/Jenkinsfile
@@ -17,6 +17,11 @@ sh './mvnw clean test'
 }
 }
 }
+post {
+always {
+sendNotification('finished', 'team@example.com')
+}
+}
 }
 
 void sendNotification(String action, String email) {
