--- a/simple-calculator/Jenkinsfile
+++ b/simple-calculator/Jenkinsfile
@@ -1,14 +1,14 @@
 pipeline {
-agent { node { label 'maven' } }
-options { skipDefaultCheckout true }
-stages {
-stage('Checkout') {
-steps {
-sendNotification('started', 'team@example.com')    
-git branch: 'notifications',
-url: 'https://github.com/JoanneYang/DO400-apps'
-}
-}
+    agent { node { label 'maven' } }
+    options { skipDefaultCheckout true }
+    stages {
+        stage('Checkout') {
+            steps {
+            sendNotification('started', 'team@example.com')    
+            git branch: 'solutions',
+        url: 'https://github.com/JoanneYang/DO400-apps'
+        }
+    }   
 stage('Test') {
 steps {
 dir('simple-calculator') {
